# DjangoSanyaProject

./: .dockerignore  .example.env  .gitignore  Dockerfile  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml  requirements.txt
DjangoSanyaProject/: asgi.py  settings.py  urls.py  wsgi.py
orders/: admin.py  enums.py  filters.py  models.py  serializers.py  urls.py  views.py
orders/migrations/: 0001_initial.py
